testsuite/gnatprove/tests/833__function_with_side_effects/test.out
test.adb:18:14: error: move as part of an allocator or a conversion to an access-to-constant type is not yet supported
gnatprove: error during flow analysis and proof
